syntax = "proto3";

package vorpal.command.v0;

service CommandService {
    rpc Package (PackageRequest) returns (stream PackageResponse);
}

enum PackageSourceKind {
    UNKNOWN = 0;
    LOCAL = 1;
    HTTP = 2;
    GIT = 3;
}

message PackageSource {
    PackageSourceKind kind = 1;
    optional string hash = 2;
    repeated string ignore_paths = 3;
    string uri = 4;
}

message PackageResponse {
    string package_log = 1;
}

message PackageRequest {
    repeated PackageResponse build_deps = 1;
    repeated PackageResponse install_deps = 2;
    string build_phase = 4;
    string install_phase = 5;
    string name = 6;
    PackageSource source = 7;
}
